# collabplot

./: .gitignore  Makefile  collab.js  collaborations.html  collabplot.cabal  default.css
client/: client.cabal  collabplot.cabal
client/src/: Figure.hs  Main.hs  Menus.hs  Model.hs  Page.hs  Primitives.hs  Shadow.hs  Utils.hs
collabdata/: model.json
collabplot/: collabplot.cabal
collabplot/src/: CollabTypes.hs
server/: server.cabal
server/snaplets/heist/templates/: _collabplot.tpl
server/src/: Application.hs  CollabHandlers.hs  CollabTypes.hs  Site.hs
server/static/: index.html
sql/: create.sql  sampledata.sql  setup.sh
src/: Figure.hs  Ingest.hs  Main.hs  Model.hs  Page.hs  Primitives.hs  Shadow.hs  Utils.hs
